# distributor

./: .coderabbit.yaml  .gitignore  Anchor.toml  Cargo.toml  README.md
.github/actions/setup/: action.yaml
.github/workflows/: build.yaml
api/src/: router.rs
cli/: Cargo.toml
cli/tests/: cli_basic_test.rs
merkle-tree/: Cargo.toml
merkle-tree/src/: airdrop_merkle_tree.rs  csv_entry.rs  merkle_tree.rs  utils.rs
merkle-tree/test_fixtures/: test_csv.csv
programs/merkle-distributor/: CLAUDE.md  Cargo.toml  README.md
programs/merkle-distributor/src/: error.rs  lib.rs
programs/merkle-distributor/src/instructions/: claim_locked.rs  clawback.rs  new_claim.rs  new_distributor.rs  set_clawback_receiver.rs
programs/merkle-distributor/src/state/: claim_status.rs
programs/merkle-distributor/tests/: README.md  test.rs
