[package]
name = "jito-scripts"
version = { workspace = true }
edition = { workspace = true }

[features]
test-sbf = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
clap = { workspace = true }
jito-merkle-tree = { path = "../merkle-tree" }
merkle-distributor = { path = "../programs/merkle-distributor", features = [
    "cpi",
] }
solana-program = { workspace = true }
solana-rpc-client = { workspace = true }
solana-sdk = { workspace = true }
spl-associated-token-account = { workspace = true }
light-client = { workspace = true }
light-sdk = { workspace = true }
tokio = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
tempfile = "3.0"
chrono = "0.4"
