[package]
name = "merkle-distributor"
version = { workspace = true }
description = "A Solana program for distributing tokens according to a Merkle root."
edition = { workspace = true }
repository = "https://github.com/jito-foundation/governance"
authors = ["Jito Foundation <team@jito.network>"]
license = "GPL-3.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "merkle_distributor"
path = "src/lib.rs"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = ["idl-build"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
test-sbf = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
bytemuck = { workspace = true }
jito-merkle-verify = { path = "../../verify" }
solana-program = { workspace = true }
solana-security-txt = { workspace = true }
light-sdk = { workspace = true, features = ["anchor"] }
light-hasher = { workspace = true }

[dev-dependencies]
light-program-test = { workspace = true }
jito-merkle-tree = { workspace = true }
solana-sdk = { workspace = true }
spl-associated-token-account = { workspace = true }
spl-token = "7"
tokio = { workspace = true }
hex = "0.4"

[lints.rust.unexpected_cfgs]
level = "allow"
check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("frozen-abi", "no-entrypoint"))',
]
