[package]
name = "merkle-distributor"
version = { workspace = true }
description = "A Solana program for distributing tokens according to a Merkle root."
edition = { workspace = true }
repository = "https://github.com/jito-foundation/governance"
authors = ["Jito Foundation <team@jito.network>"]
license = "GPL-3.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "merkle_distributor"
path = "src/lib.rs"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build", "light-sdk/idl-build"]
test-sbf = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
bytemuck = { workspace = true }
jito-merkle-verify = { path = "../../verify" }
solana-program = { workspace = true }
solana-security-txt = { workspace = true }
light-sdk = { workspace = true }
light-sdk-types = { workspace = true }
light-hasher = { workspace = true }
light-compressed-account = { workspace = true }

[dev-dependencies]
light-program-test = { workspace = true }
light-client = { workspace = true }
jito-merkle-tree = { workspace = true }
spl-associated-token-account = { workspace = true }
spl-token = "7"
solana-sdk = { workspace = true }
tokio = { workspace = true }
hex = "0.4"
anchor-spl = { workspace = true, features = ["idl-build"] }

[lints.rust]
unexpected_cfgs = "allow"
deprecated = "allow"
